cluster/apps/services/actions-runner/operator/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-actions-runner
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ghar-webhook.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: crowdsec-traefik-bouncer
        # - name: rfc1918
        # - name: authentik
        # - name: websocket-headers
      services:
        - name: actions-runner-controller-github-webhook-server
          namespace: actions-runner-system
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
